Fix white space at the bottom of tall screens
Would previously show white space if window view was at higher then 1400 display points (2800 retina pixels), e.g. a iMac with fullscreen safari or a LG UltraFine 5k monitor.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,8 +27,9 @@ $code-text: #a7adba;
 $header-shadow: 0px 0px 100px 0px rgba(0,0,0,0.3);
 $header-text-shadow: 0px 0px 80px black;
 
-
-
+html {
+  height: 100%;
+}
 
 body {
   background: $background-white;
@@ -36,6 +37,13 @@ body {
   font-family: $font-stack;
   line-height: 1.5;
   color: $text-color;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+body > main {
+  flex-grow:1; 
 }
 
 main, footer>div {
